package ca.mcmaster.se2aa4.mazerunner;

public interface ComputePath {

    Path solve();

}
